@@ -274,7 +274,6 @@ AC_DEFUN([XINE_LIB_SUMMARY], [
     dnl Audio plugins
     echo " * audio driver plugins:"
     test x"$have_alsa" = x"yes"         && echo "   - alsa (ALSA - Advanced Linux Sound Architecture)"
-    test x"$have_arts" = x"yes"         && echo "   - arts (aRts - KDE soundserver)"
     test x"$have_coreaudio" = x"yes"    && echo "   - CoreAudio (Mac OS X audio driver)"
     test x"$have_directx" = x"yes"      && echo "   - directx (DirectX audio driver)"
     test x"$have_esound" = x"yes"       && echo "   - esd (Enlightened Sound Daemon)"
